--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Rubik";
-  src: url("C:/Users/nikvn/Desktop/HTML-Academy/Device-Project/2070551-device-36/fonts/rubik/rubik-400.woff2") format("woff2");
+  src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Rubik";
-  src: url("fonts/raleway/rubik-700.woff2") format("woff2");
+  src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
   font-style: normal;
   font-weight: 700;
   font-display: swap;
@@ -16,14 +16,14 @@
 
 @font-face {
   font-family: "Raleway";
-  src: url("fonts/raleway/raleway-800.woff2") format("woff2");
+  src: url("../fonts/raleway/raleway-800.woff2") format("woff2");
   font-style: normal;
   font-weight: 800;
   font-display: swap;
 }
 
 body {
-  font-family: "Rubik";
+  font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
 }
