--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,4 +26,18 @@ body {
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
+  color: #444444;
+  background: #FFFFFF;
+}
+
+.page-header {
+background: #FFE17F;
+color: #000000;
+}
+
+.search-input {
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
 }
