--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,3 +41,9 @@ color: #000000;
   line-height: 20px;
   color: #000000;
 }
+
+.user-link {
+  text-align: center;
+  text-decoration: none;
+  color: #000000;
+}
