--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,3 +47,12 @@ color: #000000;
   text-decoration: none;
   color: #000000;
 }
+
+.navigation-link {
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
+}
