--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,3 +56,21 @@ color: #000000;
   text-decoration: none;
   text-transform: uppercase;
 }
+
+.slider-info-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+}
+
+.table-title {
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.table-description {
+  font-size: 36px;
+  line-height: 30px;
+  color: #000000;
+}
