--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,3 +74,10 @@ color: #000000;
   line-height: 30px;
   color: #000000;
 }
+
+.product-category-link {
+  font-family: "Raleway", sans-serif;
+  line-height: 24px;
+  color: #000000;
+  text-decoration: none;
+}
