--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,3 +114,16 @@ color: #000000;
   color: #000000;
   background: #F0F0F0;
 }
+
+.about-us-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+}
+
+.about-us-item {
+  font-family: "Rubik", sans-serif;
+  line-height: 20px;
+  color: #000000;
+}
