--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,14 +25,16 @@
 body {
   font-family: "Rubik", sans-serif;
   font-size: 18px;
+  font-weight: 400;
   line-height: 30px;
   color: #444444;
   background: #FFFFFF;
+  margin: 0;
 }
 
 .page-header {
-background: #FFE17F;
-color: #000000;
+  background: #FFE17F;
+  color: #000000;
 }
 
 .search-input {
@@ -51,15 +53,17 @@ color: #000000;
 .navigation-link {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
+  font-weight: 800;
   line-height: 21px;
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-.slider-info-title {
+.main-title {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
+  font-weight: 800;
   line-height: 50px;
   color: #000000;
 }
@@ -77,6 +81,7 @@ color: #000000;
 
 .product-category-link {
   font-family: "Raleway", sans-serif;
+  font-weight: 800;
   line-height: 24px;
   color: #000000;
   text-decoration: none;
@@ -84,6 +89,7 @@ color: #000000;
 
 .advantages-button {
   font-family: "Raleway", sans-serif;
+  font-weight: 800;
   line-height: 21px;
   color: #000000;
   text-transform: uppercase;
@@ -98,16 +104,10 @@ color: #000000;
   background: #F0F0F0;
 }
 
-.tab-description-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
-}
-
 .unique-advantage-text {
   font-family: "Raleway", sans-serif;
   font-size: 20px;
+  font-weight: 800;
   line-height: 23px;
   text-align: center;
   text-transform: uppercase;
@@ -115,25 +115,11 @@ color: #000000;
   background: #F0F0F0;
 }
 
-.about-us-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
-}
-
 .about-us-item {
   font-family: "Rubik", sans-serif;
   line-height: 20px;
   color: #000000;
   font-weight: 700;
-}
-
-.contacts-title  {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
 }
 
 .contacts-subtitle {
@@ -155,13 +141,6 @@ color: #000000;
   background: #F0F0F0;
 }
 
-.newsletter-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
-}
-
 .page-footer {
   background: #444444;
 }
@@ -172,12 +151,7 @@ color: #000000;
   color: #FFFFFF;
 }
 
-.footer-navigation-link {
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  line-height: 21px;
-  text-transform: uppercase;
-  text-decoration: none;
+.footer-navigation .navigation-link {
   color: #FFFFFF;
 }
 
@@ -190,13 +164,6 @@ color: #000000;
   line-height: 20px;
   text-decoration-line: underline;
   color: #FFFFFF;
-}
-
-.inner-header-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
 }
 
 .breadcrumbs-link {
