--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,14 +22,21 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
   color: #444444;
   background: #FFFFFF;
-  margin: 0;
 }
 
 .page-header {
@@ -58,6 +65,10 @@ body {
   color: #000000;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .main-title {
