--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,6 +95,11 @@ body {
   flex-grow: 1;
 }
 
+.page-container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
 .main-title {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
