--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,17 @@ body {
   background: #FFFFFF;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   display: flex;
   width: 1160px;
