--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,6 +50,20 @@ body {
   overflow: hidden;
 }
 
+.button {
+  min-width: 120px;
+  border: none;
+  text-transform: uppercase;
+  background: #FFE17F;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  font-weight: 800;
+}
+
 .container {
   display: flex;
   width: 1160px;
