--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,24 @@ body {
   font-weight: 800;
 }
 
+.search-button {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: normal;
+  width: 160px;
+  height: 40px;
+  margin-left: 0;
+  text-align: center;
+  color: #000000;
+  text-transform: none;
+  border: 2px solid #000000;
+  border-left: 0;
+  border-radius: 0 50px 50px 0;
+}
+
 .container {
   display: flex;
   width: 1160px;
@@ -76,13 +94,29 @@ body {
 }
 
 .page-header .container {
-  padding: 20px 60px;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.user-link-row {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+.navigation-row {
+  display: flex;
+  justify-content: space-between;
 }
 
 .search-form-container {
   display: flex;
-  flex-wrap: wrap;
   width: 650px;
+}
+
+.search-form {
+  display: flex;
 }
 
 .user-login {
@@ -107,10 +141,15 @@ body {
   color: #000000;
   width: 359px;
   height: 40px;
+  padding: 0 0 0 16px;
+  gap: 16px;
+  border: 2px solid #000000;
+  border-radius: 50px 0 0 50px;
 }
 
 .user-link {
-  text-align: center;
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color: #000000;
 }
