--- a/styles/styles.css
+++ b/styles/styles.css
@@ -418,6 +418,11 @@ body {
 }
 
 .email-input {
+  font-family: 'Rubik', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
   width: 557px;
   height: 52px;
   border: none;
