--- a/styles/styles.css
+++ b/styles/styles.css
@@ -389,6 +389,8 @@ body {
 
 .about-us-list {
   padding-left: 19px;
+  margin-top: 30px;
+  margin-bottom: 0;
 }
 
 .about-us-item {
@@ -400,6 +402,9 @@ body {
   letter-spacing: -0.02em;
   color: #000000;
   padding-left: 26px;
+}
+
+.about-us-item:not(:nth-child(3)) {
   margin-bottom: 19px;
 }
 
